--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':youzi:baselibrary',':youzi:common',':youzi:uiimpl01', ':services'
+include ':app', ':youzi:baselibrary',':youzi:common',':youzi:uiimpl01', ':services', ':player'
